src/App.css
.App {
  text-align: center;         
}

html {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  background-image:
    linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
    url("./images/window.png");
  background-size: cover;    
  background-position: center; 
  background-repeat: no-repeat; 
  min-height: 100vh;  
}

h1 {
  margin: 0;
}

hr {
  border: none;
  border-bottom: 2px solid grey;
  margin: 20px 0; 
}

/* Header styles */
.Header {
  color: white;
  height: 7rem;
  display: flex-col;
  justify-content: space-between;
  align-items: center;
  padding: 10px 20px;
}

.Header-logo {
  height: 5rem;
  width: auto;
}

.Header-title {
  margin: 0;
  font-size: 1.5rem;
}

.Header-link-group {
  display: inline-flex;
  gap: 20px;
  font-size: large;
  position: relative;
  border-bottom: 3px solid grey;
}

.Header-link {
  color: grey;
  font-weight: 700;
  text-decoration: none;
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 1.5rem;        
  position: relative;
}

.Header-link::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: -3px;
  width: 0;
  height: 3px;
  background: linear-gradient(to right, rgb(2, 105, 109), black);
}

.Header-link:hover::after {
  width: 100%;
}

.Header-link:hover {
  color: white;
}


/* Song Cards */

/* Grid container */
.Song-grid {
  display: flex;
  flex-wrap: wrap;
  gap: 6rem;
  padding: 20px;
  padding-top: 4rem;
  justify-content: center;
}

/* Individual card wrapper */
.Song-card {
  border-radius: 10px;
  overflow: hidden;
  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
  transition: transform 0.2s;
}

.Song-card:hover {
  transform: translateY(-5px);
}


/* Title/Description */
.Title-container {
  margin-top: 7rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  max-width: 50%;
  margin-left: auto;
  margin-right: auto;
}

.Title {
  font-size: 4rem;
  color: white;
}

.Description {  
  color: grey;
}

